--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.username=root
-spring.datasource.password=zhangqiyi1998
+spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/berry_street?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-mybatis.type-aliases-package=com.berryst.demo.pojo
+mybatis.type-aliases-package=com.berryst.demo.module
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
