--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -67,11 +67,11 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-<!--			<version>1.4.7</version>-->
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.sun.mail</groupId>-->
+<!--			<artifactId>jakarta.mail</artifactId>-->
+<!--			<version>1.6.2</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
