--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -67,6 +67,11 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>com.sun.mail</groupId>-->
 <!--			<artifactId>jakarta.mail</artifactId>-->
