--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
